Several fixes for scrolling behavior:
1. Added a bit of extra padding at the bottom of the page to get rid of the repeated bouncing when
   there is only one article that's just big enough to need a tiny bit of scrolling.
2. Removed spurious logic that's potentially causing keyboard navigation to stop working.

--- a/src/main/webapp/static/css/newsrdr.css
+++ b/src/main/webapp/static/css/newsrdr.css
@@ -124,6 +124,12 @@ and (orientation : landscape) {
     #feedPanel.affix > .navCollapse {
         max-height: 650px;
     }
+    
+    /* To prevent desktop browsers from seizing when scrolling past articles
+       that are just too short. */
+    #no-more-posts {
+    	margin-bottom: 50px;
+    }
 }
 
 .unread {
